--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "mongoose": "^7.2.3"
